--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             </a>
                     </div>
                     <div class="col-md-4 col-xs-6 col-lg-4 linkbox ">
-                        <a href="http://teresaecker.co.nz/">
+                        <a href="http://teresasecker.co.nz/">
                         <img src="images/teresa.png" class="img-responsive">
                         <h4>Teresa</h4>
                         <p></p>
